[package]
name = "quibbler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4", features = ["derive"] }
confy = "0.6.1"
home = "0.5.9"
macro_colors = "0.2.0"
reqwest = "0.12.7"
rss = "2.0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
